--- a/index.html
+++ b/index.html
@@ -7,7 +7,21 @@
         <title>Train Ticket</title>
     </head>
     <body>
-        
+        <main>
+            <h1>Biglietto del treno</h1>
+            <form>
+                <div>                   
+                    <label for="km">Inserisci i km che vorresti percorrere</label>
+                    <input type="number" id="km">
+                </div>
+                <div>
+                    <label for="user-age">Inserisci l'età del passeggero/a</label>
+                    <input type="number" id="user-age">
+                </div>
+                <button type="button">Scopri il prezzo</button>
+            </form>
+            <h2></h2>
+        </main>
         <script type="text/javascript" src="./js/script.js"></script>
     </body>
 </html>
